--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="b8a155c8-b0b7-4cb0-8b49-bf0d9e7353ae" data-blockingmode="auto" type="text/javascript"></script>
+
 </head>
 <body>
   <app-root></app-root>
+  <script id="CookieDeclaration" src="https://consent.cookiebot.com/b8a155c8-b0b7-4cb0-8b49-bf0d9e7353ae/cd.js" type="text/javascript" async></script>
 </body>
 </html>
