--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="b8a155c8-b0b7-4cb0-8b49-bf0d9e7353ae" data-blockingmode="auto" type="text/javascript"></script>
-
+  <script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
   <app-root></app-root>
